--- a/2025-09-27-log.md
+++ b/2025-09-27-log.md
@@ -2,21 +2,11 @@
 
 ## 2025-09-27
 
-**Weight**: 104kg
+**weight:** 104kg  
+**warm-up:** 3 min rower
 
-### 🏋️ Exercises
-
-- **Biceps Curl**: 5kg × 20 reps
-- **Lateral Raise**: 5kg × 30 reps
-- **Shoulder Press**: 5kg × 20 reps
-- **Walking Lunges**: 5kg × 18 steps
-
---
-
-### 🔢 Total Volume Lifted
-
-## **880kg**
-
-### 🧠 Notes
-
-left arm sholder press minor pain, previous injury
+- Chest press – 3×15 @ 40kg → 1,800kg
+- Rear delt fly (iso) – 3×15 @ 33kg → 1,485kg
+- Seated leg press – 3×15 @ 65kg → 2,925kg  
+  **cool-down:** 3 min rower  
+  **total volume:** 6,210kg
